--- a/Day-02/DIDemo/DIDemo.Contracts/DIDemo.Contracts.csproj
+++ b/Day-02/DIDemo/DIDemo.Contracts/DIDemo.Contracts.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{90AE61A6-CED5-483A-B97F-D05E7AF0E108}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{14D9950F-C033-45B5-B881-D08EAD6BCF0E}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DIDemo</RootNamespace>
-    <AssemblyName>DIDemo</AssemblyName>
+    <RootNamespace>DIDemo.Contracts</RootNamespace>
+    <AssemblyName>DIDemo.Contracts</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -33,7 +31,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,17 +39,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CsvProductsDestination.cs" />
-    <Compile Include="ProductDataTransfomer.cs" />
-    <Compile Include="ProductsInMemorySource.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="IProductDestination.cs" />
+    <Compile Include="IProductSource.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\DIDemo.Contracts\DIDemo.Contracts.csproj">
-      <Project>{14d9950f-c033-45b5-b881-d08ead6bcf0e}</Project>
-      <Name>DIDemo.Contracts</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
