--- a/Day-02/ProductsTransformersCollection/ProductsTransformersCollection/ProductsTransformersCollection.csproj
+++ b/Day-02/ProductsTransformersCollection/ProductsTransformersCollection/ProductsTransformersCollection.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{90AE61A6-CED5-483A-B97F-D05E7AF0E108}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{1FEBCB97-5E08-4B0A-9651-CDA6DBF11F54}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DIDemo</RootNamespace>
-    <AssemblyName>DIDemo</AssemblyName>
+    <RootNamespace>ProductsTransformersCollection</RootNamespace>
+    <AssemblyName>ProductsTransformersCollection</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -32,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DIDemo.Contracts">
+      <HintPath>C:\Users\Magesh\Desktop\Deployment\DIDemo.Contracts.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
@@ -42,17 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CsvProductsDestination.cs" />
-    <Compile Include="ProductDataTransfomer.cs" />
-    <Compile Include="ProductsInMemorySource.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DIDemo.Contracts\DIDemo.Contracts.csproj">
-      <Project>{14d9950f-c033-45b5-b881-d08ead6bcf0e}</Project>
-      <Name>DIDemo.Contracts</Name>
-    </ProjectReference>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
